logs/autopilot.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/autopilot'...
Listing './lib/python3.5/site-packages/autopilot/data'...
Listing './lib/python3.5/site-packages/autopilot/data/licenses'...
Listing './lib/python3.5/site-packages/autopilot/data/templates'...
Listing './lib/python3.5/site-packages/autopilot/data/templates/docs'...
Listing './lib/python3.5/site-packages/autopilot/data/templates/docs/source'...
Compiling './lib/python3.5/site-packages/autopilot/data/templates/docs/source/conf.py'...
***   File "./lib/python3.5/site-packages/autopilot/data/templates/docs/source/conf.py", line 16
    from ${project_name} import __version__
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/autopilot/data/templates/setup.py'...
***   File "./lib/python3.5/site-packages/autopilot/data/templates/setup.py", line 34
    % for py_version in py_versions:
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/autopilot/data/templates/src'...
Listing './lib/python3.5/site-packages/autopilot/data/templates/src/${project_name}'...
Listing './lib/python3.5/site-packages/autopilot/data/templates/tests'...
Compiling './lib/python3.5/site-packages/autopilot/data/templates/tests/${project_name}_test.py'...
***   File "./lib/python3.5/site-packages/autopilot/data/templates/tests/${project_name}_test.py", line 1
    import ${project_name}
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/autopilot-0.3.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/distlib'...
Listing './lib/python3.5/site-packages/distlib/_backport'...
Listing './lib/python3.5/site-packages/distlib-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ruamel'...
Listing './lib/python3.5/site-packages/ruamel/yaml'...
Listing './lib/python3.5/site-packages/ruamel.yaml-0.15.35.dist-info'...
Listing './lib/python3.5/site-packages/sarge'...
Listing './lib/python3.5/site-packages/sarge-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
